<?xml version="1.0"?>
<package format="2">
  <name>jhr_localization</name>
  <version>0.0.0</version>
  <description>The mbot_localization package</description>

  <maintainer email="1692697820@qq.com">Li Jianghao</maintainer>
  <author email="1692697820@qq.com">Li Jianghao</author>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
